# agent-orchestra

./: .gitignore  .gitmodules  README.md  README.zh-CN.md  pyproject.toml
requirements/: index.md
requirements/REQ-001-agent-management-platform/: req-component.puml  req-pubsub-sequence.puml  req-session-lifecycle.puml  req-usecase.puml  requirement.md  tech-architecture.puml  tech-er.puml  technical.md
requirements/REQ-008-agentpane-focus-input-layout/: requirement.md
requirements/REQ-009-group-auto-create-agents/: requirement.md
requirements/REQ-011-native-tmux-attach/: req-flow.puml  req-usecase.puml  requirement.md  tech-architecture.puml  tech-sequence.puml  technical.md
requirements/REQ-012-mcp-agent-communication-fix/: req-flow.puml  req-sequence-enter.puml  req-usecase.puml  requirement.md  tech-architecture.puml  tech-sequence.puml  technical.md
requirements/REQ-013-terminal-attach-interaction/: requirement.md
requirements/REQ-014-quality-hardening/: requirement.md  technical.md
requirements/REQ-015-native-first-interaction/: requirement.md  technical.md
requirements/REQ-016-interaction-polish-and-dispatch-reliability/: requirement.md  technical.md
requirements/REQ-017-restore-orchestrator-autonomy/: requirement.md  technical.md
scripts/: build.bat  build.sh  start.bat  start.sh  test.bat  test.sh
tests/: test_agent_pane.py  test_dispatch_integration.py  test_key_forwarding.py  test_models.py  test_orchestrator.py  test_repository.py  test_session_manager.py  test_supervisor_concurrency.py  test_tmux_attach.py  test_workflows.py
(+19 files in other folders)
